change completed task styling to fix mobile browser alignment

--- a/src/components/completedcard/completed.css
+++ b/src/components/completedcard/completed.css
@@ -1,6 +1,6 @@
 .completedCard {
     display: flex;
-    justify-content: end;
+    justify-content: right;
     margin: 5px 0px 10px 0px;
 }
 .taskName {
